k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tot-debugging
  labels:
    app: tot-debugging
